--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "babel-preset-env": "^1.7.0",
     "css-loader": "^1.0.0",
     "style-loader": "^0.21.0",
+    "svg-inline-loader": "^0.8.0",
     "webpack": "^4.16.3",
     "webpack-cli": "^3.1.0"
   },
