--- a/package.json
+++ b/package.json
@@ -1,35 +1,34 @@
 {
-  "name": "codex.editor.warning",
-  "version": "1.0.0",
+  "name": "@editorjs/warning",
+  "version": "1.1.0",
   "keywords": [
     "codex editor",
     "tool",
-    "warning"
+    "warning",
+    "editorjs",
+    "editor.js",
+    "editor"
   ],
-  "description": "Warning Tool for CodeX.Editor",
+  "description": "Warning Tool for Editor.js",
   "license": "MIT",
-  "repository": "https://github.com/codex-editor/warning",
+  "repository": "https://github.com/editor-js/warning",
   "main": "./dist/bundle.js",
   "scripts": {
-    "build": "webpack --config ./webpack.config.js --mode production --watch"
+    "build:dev": "webpack --config ./webpack.config.js --mode=development --watch",
+    "build": "webpack --config ./webpack.config.js --mode=production"
   },
   "author": {
     "name": "CodeX Team",
-    "email": "team@ifmo.su"
+    "email": "team@codex.so"
   },
   "devDependencies": {
-    "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.5",
-    "babel-preset-env": "^1.7.0",
+    "@babel/core": "^7.3.4",
+    "@babel/preset-env": "^7.3.4",
+    "babel-loader": "^8.0.5",
     "css-loader": "^1.0.0",
     "style-loader": "^0.21.0",
     "svg-inline-loader": "^0.8.0",
     "webpack": "^4.16.3",
     "webpack-cli": "^3.1.0"
-  },
-  "babel": {
-    "presets": [
-      "env"
-    ]
   }
 }
