--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@editorjs/warning",
-  "version": "1.2.0",
+  "version": "1.3.0",
   "keywords": [
     "codex editor",
     "tool",
@@ -30,5 +30,8 @@
     "svg-inline-loader": "^0.8.0",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.3.0"
+  },
+  "dependencies": {
+    "@codexteam/icons": "^0.0.4"
   }
 }
