feat(migration): migrate project to typescript

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@editorjs/warning",
-  "version": "1.4.0",
+  "version": "1.4.1",
   "keywords": [
     "codex editor",
     "warning",
@@ -16,10 +16,12 @@
   ],
   "main": "./dist/warning.umd.js",
   "module": "./dist/warning.mjs",
+  "types": "./dist/index.d.ts",
   "exports": {
     ".": {
       "import": "./dist/warning.mjs",
-      "require": "./dist/warning.umd.js"
+      "require": "./dist/warning.umd.js",
+      "types": "./dist/index.d.ts"
     }
   },
   "scripts": {
@@ -31,10 +33,13 @@
     "email": "team@ifmo.su"
   },
   "devDependencies": {
+    "typescript": "^5.6.3",
     "vite": "^4.5.0",
-    "vite-plugin-css-injected-by-js": "^3.3.0"
+    "vite-plugin-css-injected-by-js": "^3.3.0",
+    "vite-plugin-dts": "^4.3.0"
   },
   "dependencies": {
-    "@codexteam/icons": "^0.0.4"
+    "@codexteam/icons": "^0.3.2",
+    "@editorjs/editorjs": "^2.30.7"
   }
 }
